--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 [![R build status](https://github.com/torockel/missMethods/workflows/R-CMD-check/badge.svg)](https://github.com/torockel/missMethods/actions)
 <!-- badges: end -->
 
-The goal of missMethods is to make the comparison of missing data methods via simulation easier.
+The goal of missMethods is to make the creation and handling of missing data as well as the evaluation of missing data methods easier.
 
 ## Installation
 
@@ -41,9 +41,20 @@ devtools::install_github("torockel/missMethods")
 <!-- # install.packages("devtools") -->
 <!-- devtools::install_github("torockel/missMethods") -->
 <!-- ``` -->
+
+## Usage
+
+missMethods mainly provides three types of functions:
+
+* `delete_*` functions for generating missing values
+* `impute_*` functions for imputing missing values
+* `evaluate_*` functions for evaluating missing data methods
+
+Run `help(package = "missMethods")` to see all functions. More details for the `delete_*` functions are given in a vignette (run `vignette("Generating-missing-values")`).
+
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+This is a very basic workflow to generate missing values, impute the generated missing values and evaluate the imputation result:
 
 ```{r example}
 library(missMethods)
