--- a/README.Rmd
+++ b/README.Rmd
@@ -55,8 +55,8 @@ This is a very basic workflow to generate missing values, impute the generated m
 library(missMethods)
 set.seed(123)
 ds_comp <- data.frame(X = rnorm(100), Y = rnorm(100))
-ds_miss <- delete_MCAR(ds_comp, 0.3)
-ds_imp <- impute_mean(ds_miss)
+ds_mis <- delete_MCAR(ds_comp, 0.3)
+ds_imp <- impute_mean(ds_mis)
 evaluate_imputed_values(ds_imp, ds_comp, "RMSE")
 ```
 
